// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LightGroup should go into edit mode on click 1`] = `
<div
  className="deviceGroup_3hmsj"
>
  <div>
    <input
      defaultValue="Test Group"
    />
    <button
      onClick={[Function]}
    >
      OK
    </button>
  </div>
  <div
    className="deviceGroupBody_jro6t0"
  >
    <Connect(Light)
      id={65537}
      key="Decke"
    />
  </div>
</div>
`;

exports[`LightGroup should render correctly 1`] = `
<div
  className="deviceGroup_3hmsj"
>
  <h3
    className="name_7bdam5"
    onClick={[Function]}
  >
    Test Group
  </h3>
  <div
    className="deviceGroupBody_jro6t0"
  >
    <Connect(Light)
      id={65537}
      key="Decke"
    />
  </div>
</div>
`;
